# QSRequests

./: main.py  pyproject.toml
app/: crud.py  dependencies.py  models.py  schemas.py  settings.py
app/routers/: router.py
